# agentic-reg-ingest

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTIC_CHEATSHEET.md  AGENTIC_CONFIG_GUIDE.md  AGENTIC_QUICKSTART.md  AUDIT_TRAIL_GUIDE.md  CACHE_JUDGE_GUIDE.md  CACHE_STRATEGY.md  CHANGELOG.md  CHANGELOG_AGENTIC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORREÇÃO_AUTHORITY_DOMAINS.md  DEBUG_GUIDE.md  DEBUG_WEB_UI.md  DIAGRAMA_URLS_STORAGE.md  Dockerfile  ENV_EXAMPLE_COMPLETE.txt  GUIDE_IMPLEMENTAR_GPT_HYPOTHESIS.md  IMPLEMENTATION_SUMMARY_VISION.md  IMPLEMENTAÇÃO_FINAL_COMPLETA.md  LICENSE  Makefile  NOVO_ENDPOINT_SEARCH.md  Prompt gera slides.txt  QUICKSTART_ATIVAR_GPT.md  QUICKSTART_CHECKLIST.md  QUICKSTART_VISION.md  QUICK_REFERENCE.md  QUICK_START_HTML.md  README.md  README_VISION_ENRICHMENT.md  RESUMO_FINAL_VISION.md  SECURITY.md  SETUP_COMPLETO.md  START_HERE.md  TEST_AGENTIC.md  UI_GUIDE.md  VERTEX_AI_SEARCH_SETUP.md  (+13 more)
agentic/: __init__.py  cse_client.py  detect.py  html_extract.py  llm.py  normalize.py  quality.py  schemas.py  scoring.py  search_client_factory.py  search_service.py  vertex_search_client.py
apps/: __init__.py
common/: __init__.py  env_readers.py  settings.py
configs/: agentic.yaml  cse.yaml  db.yaml  ingest.yaml  vertex_search.yaml  vision_enrichment.yaml
db/: __init__.py  dao.py  judge_cache_dao.py  models.py  schema.sql  session.py  upload_dao.py
docs/: ORGANIZATION.md  README.md  SUMMARY.md  datamodel.sql  index.md
embeddings/: __init__.py  encoder.py
examples/: agentic_plan_example.json  agentic_plan_html_only.json  (+2 more)
(+129 files in other folders)
